--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" menuId="first" contentId="content1">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Navigate</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="true">
+          <ion-item routerLink="/contacts" routerDirection="forward">
+            page de contact
+          </ion-item>
+          <ion-item routerLink="/chat" routerDirection="forward">
+            page de chat
+          </ion-item>
+          <ion-item routerLink="/home" routerDirection="forward">
+            page d'accueil
+          </ion-item>
+          <ion-item routerLink="/products" routerDirection="forward">
+            page des produits
+          </ion-item>
+          <ion-item routerLink="/summary" routerDirection="forward">
+            page des barres de recherche
+          </ion-item>
+          <ion-item routerLink="/grid" routerDirection="forward">
+            page des grid
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1"></ion-router-outlet>
 </ion-app>
