--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,78 @@
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+   
+    <h1>Hello</h1>
+
+    <form>
+      <label for="pet-select">Choose a pet:</label>
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-icon name="baseball"></ion-icon>
+      <ion-button color="success">
+        <ion-icon name="baseball" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-button expand="block" fill="outline">Outline + Block</ion-button>
+
+    </form>
+
+    <!-- List of Text Items -->
+    <ion-list>
+      <ion-list-header>Jeux</ion-list-header>
+      <ion-item>
+        <ion-label>Pokémon Yellow</ion-label>
+        <ion-avatar>
+          <ion-img src="/assets/image/pokemon_jaune.jpg"></ion-img>
+        </ion-avatar>
+      </ion-item>
+      <ion-item>
+        <ion-label>Mega Man X</ion-label>
+        <ion-avatar>
+          <ion-img src="/assets/image/megaman.jpg"></ion-img>
+        </ion-avatar>
+      </ion-item>
+      <ion-item>
+        <ion-label>The Legend of Zelda</ion-label>
+        <ion-avatar>
+          <ion-img src="/assets/image/zelda.jpg"></ion-img>
+        </ion-avatar>
+      </ion-item>
+      <ion-item>
+        <ion-label>Pac-Man</ion-label>
+        <ion-avatar>
+          <ion-img src="/assets/image/pacman.jpg"></ion-img>
+        </ion-avatar>
+      </ion-item>
+      <ion-item>
+        <ion-label>Super Mario World</ion-label>
+        <ion-avatar>
+          <ion-img src="/assets/image/supermario.jpg"></ion-img>
+        </ion-avatar>
+      </ion-item>
+    </ion-list>
+
+    <ion-list>
+      <!-- Sliding item with text options on both sides -->
+      <ion-item-sliding>
+        <ion-item-options side="start">
+          <ion-item-option (click)="favorite(item)">Favorite</ion-item-option>
+          <ion-item-option color="danger" (click)="share(item)">Share</ion-item-option>
+        </ion-item-options>
+
+        <ion-item>
+          <ion-label>Item Options</ion-label>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
   </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar padding>
+    <ion-label class="ion-text-center">&copy; moi et mon nombril</ion-label>
+  </ion-toolbar>
+
+</ion-footer>
